      printed.

    o get_bkg(): the list.out and as.prob options have been disabled. To
      simplify the function, the only possible output (exception: if to.meme is
      not NULL) is a DataFrame showing both counts and probabilities.

    o General documentation cleanup.

BUG FIXES

    o Changing motif backgrounds with `[<-` will now make sure to set correct
      vector names.

CHANGES IN VERSION 1.6.4
------------------------

BUG FIXES

    o cbind(): do not ignore the pseudocount slot.

    o Fixed typo in IntroductionToSequenceMotifs.Rmd.

    o Fixed U() function in IntroductionToSequenceMotifs.Rmd, no longer returns
      NA values if 0s are present.

    o read_cisbp(): no parsing errors for motifs with missing/partial header
      info.

CHANGES IN VERSION 1.6.3
------------------------

BUG FIXES

    o scan_sequences(): commented out WIP code for scanning gapped motifs.

CHANGES IN VERSION 1.6.2
------------------------

BUG FIXES

    o motif_tree(): 'daylight' layout is no longer disabled.

CHANGES IN VERSION 1.6.1
------------------------

BUG FIXES

    o summarise_motif(): properly retrieves altname slot. Contribution from
      Spencer Nystrom (https://github.com/bjmt/universalmotif/pull/9).

    o read_meme(): for LIKE type alphabets, make sure PROTEIN-LIKE is
      understood as being AA.

CHANGES IN VERSION 1.6.0
------------------------

NEW FEATURES

    o log_string_pval(): small utility function to obtain the log of
      string-formatted p-values (such as those often carried in
      MEME-formatted motifs which are smaller than R's double.xmin limit).
      Likely only a temporary solution.

    o view_motifs(..., return.raw) option: instead of returning a plot
      type object, return the aligned motif matrices.

    o view_motifs(..., dedup.names) option: allows plotting of motifs with
      duplicated names by appending a unique string.

    o merge_motifs(..., new.name) option: assign a name to the new merged motif