@@ -185,9 +185,10 @@ motif_pvalue <- function(motifs, score, pvalue, bkg.probs, use.freq = 1,
     message(wmsg("Note: found -Inf values in motif PWMs. Normalizing. ",
       "Set `allow.nonfinite = TRUE` to prevent this behaviour."))
     for (i in which(anyinf)) {
-      motifs[[i]] <- convert_type(motifs[[i]], "PPM")
-      motifs[[i]]["pseudocount"] <- 1
-      motifs[[i]] <- convert_type(motifs[[i]], "PWM")
+      motifs[[i]] <- normalize(motifs[[i]])
+      # motifs[[i]] <- convert_type(motifs[[i]], "PPM")
+      # motifs[[i]]["pseudocount"] <- 1
+      # motifs[[i]] <- convert_type(motifs[[i]], "PWM")
     }
   }
 
